--- a/MovieWebApp/MovieData/MovieData.csproj
+++ b/MovieWebApp/MovieData/MovieData.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MovieDataOperation.cs" />
     <Compile Include="movie.cs">
       <DependentUpon>MovieDataModel.tt</DependentUpon>
     </Compile>
